--- a/Q12a.html
+++ b/Q12a.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>~
+    <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>  
     <link rel="stylesheet" href="css/style.css">
     <script src="funçoes.js"> </script>
@@ -15,11 +15,16 @@
 </head>
 
 <body class="fundo1" onchange="salvarFormulario('q12')" onload="autofill('q12')">
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
+            aria-valuemin="0" aria-valuemax="100" style="width: 34%">34%</div>
+    </div>
     <div class="container">
         <div class="text-center">
             <h1 class="font-weight-bold cssEnade">Site Simulado ENADE</h1>
             <h3>TEMA: Análise e Desenvolvimento de Sistemas - 2011</h3>
         </div>
+        
         <br><br>
 
         <h4>QUESTÃO 12</h4>
