--- a/Q13a.html
+++ b/Q13a.html
@@ -15,6 +15,11 @@
 </head>
 
 <body class="fundo1" onchange="salvarFormulario('q13')" onload="autofill('q13')">
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
+            aria-valuemin="0" aria-valuemax="100" style="width: 37%">37%</div>
+    </div>
+    
     <div class="container">
         <div class="text-center">
             <h1 class="font-weight-bold cssEnade">Site Simulado ENADE</h1>
