--- a/Q1a.html
+++ b/Q1a.html
@@ -15,11 +15,14 @@
 </head>
 
 <body class="fundo1" onchange="salvarFormulario('q1')" onload="autofill('q1')" >
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
+            aria-valuemin="0" aria-valuemax="100" style="width: 3%">3%</div>
+    </div>
     <div class="container">
         <div class="text-center">
             <h1 class="font-weight-bold corEnade">Site Simulado ENADE</h1>
             <h3>TEMA: Análise e Desenvolvimento de Sistemas - 2011</h3>
-
         </div>
         <br><br>
         <h4>QUESTÃO 1</h4>
