--- a/Q26a.html
+++ b/Q26a.html
@@ -15,6 +15,10 @@
 </head>
 
 <body class="fundo1" onchange="salvarFormulario('q26')" onload="autofill('q26')">
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
+            aria-valuemin="0" aria-valuemax="100" style="width: 74%">74%</div>
+    </div>
     <div class="container">
         <div class="text-center">
             <h1 class="font-weight-bold corEnade">Site Simulado ENADE</h1>
