--- a/Q29a.html
+++ b/Q29a.html
@@ -14,7 +14,11 @@
     <title>Questão 29</title>
 </head>
 
-<body class="fundo1" onchange="salvarFormulario('q29')" onload="autofill('q29')"></body>
+<body class="fundo1" onchange="salvarFormulario('q29')" onload="autofill('q29')">
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
+            aria-valuemin="0" aria-valuemax="100" style="width: 83%">83%</div>
+    </div>
     <div class="container">
         <div class="text-center">
             <h1 class="font-weight-bold corEnade">Site Simulado ENADE</h1>
