--- a/Q6a.html
+++ b/Q6a.html
@@ -15,6 +15,10 @@
 </head>
 
 <body class="fundo1" onchange="salvarFormulario('q6')" onload="autofill('q6')">
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
+            aria-valuemin="0" aria-valuemax="100" style="width: 17%">17%</div>
+    </div>
     <div class="container">
         <div class="text-center">
             <h1 class="font-weight-bold cssEnade">Site Simulado ENADE</h1>
