--- a/PaginaInicial.html
+++ b/PaginaInicial.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>
+    <link rel="icon" type="imagem/png" href="img/logoEnade.png" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <title>Página Inicial</title>
@@ -13,6 +13,9 @@
 
 <body class="fundo1">
     <div class="container text-center">
+        <p></p>
+        <img src="img/logo.png">
+        <p></p>
         <h1 class="corEnade">
             O que é o <i>"ENADE"?</i>
         </h1>
@@ -23,7 +26,9 @@
             graduação em relação aos conteúdos programáticos previstos nas diretrizes curriculares dos cursos, o
             desenvolvimento de competências e habilidades necessárias ao aprofundamento da formação geral e
             profissional, e o nível de atualização dos estudantes com relação à realidade brasileira e mundial. <br>
-            <i>FONTE: <a target="_blank" href="https://www.gov.br/inep/pt-br/areas-de-atuacao/avaliacao-e-exames-educacionais/enade">Enade - Inep</a></i>
+            <i>FONTE: <a target="_blank"
+                    href="https://www.gov.br/inep/pt-br/areas-de-atuacao/avaliacao-e-exames-educacionais/enade">Enade -
+                    Inep</a></i>
         </p>
         <hr>
         <h2 class="corEnade">
@@ -37,9 +42,9 @@
         <h2 class="corEnade">
             Professor Orientador:
         </h2>
-            <h5>
-                FELIX, Rita
-            </h5>
+        <h5>
+            FELIX, Rita
+        </h5>
         <hr>
         <h2 class="corEnade">
             Autores:
@@ -51,17 +56,18 @@
         <hr>
         <br>
         <div>
-            <h2 class="corEnade">Prova Enade Análise e Desenvolvimento de Sistemas ano 2011</h2>
+            <h2 class="corEnade">Prova Enade Análise e Desenvolvimento de Sistemas 2011</h2>
             <br>
             <p>
-                Prova de Tecnologia Análise e Desenvolvimento de Sistemas 2011 : <a target="_blank" href="pdf/PROVA_ANALISE_E_DESENVOLVIMENTO_DE_SISTEMAS.pdf"> Clique aqui </a>
+                Prova de Tecnologia Análise e Desenvolvimento de Sistemas 2011 : <a target="_blank"
+                    href="pdf/PROVA_ANALISE_E_DESENVOLVIMENTO_DE_SISTEMAS.pdf"> Clique aqui </a>
             </p>
             <p>
-                Gabarito da prova de Tecnologia Análise e Desenvolvimento de Sistemas 2011: <a target="_blank" href="pdf/Enade2011_Gabarito_Def_Tec_Analise_Des_Sistemas.pdf"> Clique aqui </a>
+                Gabarito da prova de Tecnologia Análise e Desenvolvimento de Sistemas 2011: <a target="_blank"
+                    href="pdf/Enade2011_Gabarito_Def_Tec_Analise_Des_Sistemas.pdf"> Clique aqui </a>
             </p>
-            <p>
-                Padrão de prova de Tecnologia Análise e Desenvolvimento de Sistemas 2011: <a target="_blank" href="pdf/PADRAO_DE_RESPOSTA_TECNOLOGIA_EM_ANALISE_DESENVOLVIMENTO_SISTEMAS.pdf"> Clique aqui </a>
-            </p>
+            Padrão de prova de Tecnologia Análise e Desenvolvimento de Sistemas 2011: <a target="_blank"
+                href="pdf/PADRAO_DE_RESPOSTA_TECNOLOGIA_EM_ANALISE_DESENVOLVIMENTO_SISTEMAS.pdf"> Clique aqui </a>
         </div>
         <br>
         <hr>
@@ -69,11 +75,13 @@
 
         <a class="btn btn-primary" type="submit" href="Q1a.html">INICIAR SIMULADO PMI</a>
 
-        <a class="btn btn-primary text-white" onclick="abrir('http://enade.inep.gov.br/enade/#!/index')">Pop-UP ENADE</a>
+        <a class="btn btn-primary text-white" onclick="abrir('http://enade.inep.gov.br/enade/#!/index')">Pop-UP
+            ENADE</a>
 
         <br>
         <hr>
-        <p> <i>Mais informações sobre o Enade, consultar o site do Enade no link: <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a></i></p>
+        <p> <i>Mais informações sobre o Enade, consultar o site do Enade no link: <a target="_blank"
+                    href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a></i></p>
 
         <script>
 
